--- a/Components/HorizontalPanel.razor
+++ b/Components/HorizontalPanel.razor
@@ -4,7 +4,11 @@
 @implements ILayoutComponent
 @implements IDropAreaContainer
 
-<DropArea StyleClass="drop-area-horizontal" PreviewMode="PreviewMode" DesignMode="DesignMode"></DropArea>
+<DropArea StyleClass="drop-area-horizontal" PreviewMode="PreviewMode" DesignMode="DesignMode" style="@GetStyle()"></DropArea>
 
 @code {
+	public HorizontalPanel()
+	{
+		Padding = new Models.Margin(30, 30, 30, 30);
+	}
 }
