--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -33,9 +33,6 @@
 }
 
 .drop-area-panel {
-    display: grid;
-    width: 100%;
-    height: 100%;
 }
 
 .drop-area-vertical {
@@ -69,6 +66,10 @@
     font-size: 30px;
     position: absolute;
     transform: translate(-25px, -40px);
+}
+
+.drop-area-tab-page {
+
 }
 
 .dropzone {
@@ -115,4 +116,14 @@
 
 .selected {
     border: solid 2px lightgreen;
+}
+
+.margin-editor {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 10px;
+}
+
+.margin-editor label {
+    padding-top: 5px;
 }
